feat: add finance analysis tools for market data fetching, indicator computation, and report generation
- Implemented `compute-indicators` tool to calculate financial indicators (SMA, EMA, RSI, MACD, volatility, max drawdown) from market candles.
- Created `fetch-market-data` tool to retrieve OHLCV market data from configured quote providers.
- Developed `generate-report` tool to create structured financial analysis reports based on market data and computed indicators.
- Introduced `workflow-store` to manage the state of financial analyses, including market data, indicators, and reports.
- Added `run-finance-workflow` function to orchestrate the workflow of fetching market data, computing indicators, and generating reports.
- Updated tests for the new tools and workflow to ensure functionality and error handling.
- Refactored existing code to integrate new tools into the finance agent framework.

--- a/packages/finance-assistant/package.json
+++ b/packages/finance-assistant/package.json
@@ -5,7 +5,10 @@
 	"type": "module",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"files": ["dist", "README.md"],
+	"files": ["dist", "skills", "README.md"],
+	"pi": {
+		"skills": ["./skills"]
+	},
 	"scripts": {
 		"clean": "node -e \"require('node:fs').rmSync('dist', { recursive: true, force: true })\"",
 		"build": "tsgo -p tsconfig.build.json",
