feat: implement client onboarding workflow and associated tools
- Add `runClientOnboardingWorkflow` to handle client onboarding process.
- Create tests for `buildAdvisorySummary`, `risk-template-registry`, and various tools related to client goals, investment policy statements, and advisory operations.
- Enhance agent tests to include new workflows and skills.
- Introduce CLI tests for workflow commands and compliance report generation.
- Implement tools for generating client review packets and logging advisory decisions.
- Add monitoring tools for portfolio drift and risk budget, with comprehensive test coverage.

--- a/packages/finance-assistant/package.json
+++ b/packages/finance-assistant/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"files": ["dist", "skills", "README.md"],
+	"files": ["dist", "skills", "config", "README.md"],
 	"pi": {
 		"skills": ["./skills"]
 	},
@@ -14,6 +14,7 @@
 		"build": "tsgo -p tsconfig.build.json",
 		"dev": "tsgo -p tsconfig.build.json --watch --preserveWatchOutput",
 		"example:cli": "tsx examples/cli-finance.ts",
+		"example:workflow": "tsx examples/cli-finance-workflow.ts",
 		"test": "vitest --run",
 		"prepublishOnly": "npm run clean && npm run build"
 	},
